# snappi

./: .gitignore  .gitmodules  Config.in  README.md  external.desc
board/raspberrypi/: config.txt  post-build.sh
board/rpi0w/: config.txt
configs/: snappi_client_defconfig  snappi_client_rpi0w_defconfig  snappi_client_rpi4_defconfig
doc/: client_eq.md  notes.md  power_consumption.xlsx  stock_raspberrypios_snapcast.md
package/alsaequal/: Config.in  alsaequal-01-cross-compile-fix.patch  alsaequal.mk  readme.txt
package/jacktrip/: Config.in  jacktrip-01-remove-linux-desktop-files.patch  jacktrip-02-ignore-ipv6-failures.patch  jacktrip-03-better-errors.patch  jacktrip.mk  jacktrip.service
package/ladspa/: Config.in  ladspa.mk
package/python-osc/: Config.in  python-osc.mk
package/rtaudio/: Config.in  rtaudio.mk
package/snapcast/: snapcast.mk  snapclient.service  snapserver.service
package/snappi-cloud-init/: Config.in  S03snappi-cloud-init  snappi-cloud-init  snappi-cloud-init.mk  snappi-cloud-init.service
package/snappi-server-config/: Config.in  snappi-server-config-startup.service  snappi-server-config.mk  snappi-server-config.service  uac2.service  uac2.sh
package/snappi-server-config-ui/: Config.in  snappi-server-config-ui.mk
package/snappi-server-config/app/: .gitignore  pyproject.toml
package/snappi-server-config/app/src/snappi_server_config/: config.py  control.py  defaults.py  main.py  pipewire.py  server.py  settings.py  utils.py
snappi-client/: Config.in  external.mk
snappi-server/: Config.in  external.desc  external.mk  overrides.mk
(+118 files in other folders)
